--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline
     stages {
         stage('Hello') {
             steps {
-                sh 'pwd'
+                sh 'mvn'
                   }
                         }
     }
