--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,7 +1,11 @@
 pipeline
 {
     agent {
-      node { label 'Mac' }
+     // node { label 'Mac' }
+             docker {
+                 image 'maven:3-alpine'
+                 args '-v /root/.m2:/root/.m2'
+             }
            }
     stages {
         stage('Hello') {
