--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline
             //     image 'maven:3-alpine'
             //     args '-v /root/.m2:/root/.m2'
             // }
-           tools { maven   'Apache Maven 3.8.6' }
+           //tools { maven   'Apache Maven 3.8.6' }
     stages {
         stage('Initialize') {
             steps {sh '''echo "PATH = ${PATH}"'''}
