--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,6 +1,6 @@
 pipeline
 {
-    agent  { label 'Mac' }
+    agent  { label 'EC2' }
             // docker {
             //     image 'maven:3-alpine'
             //     args '-v /root/.m2:/root/.m2'
