testing  mvn after installing maven pipeline plugin in Jenkins set up MAVEN_HOME and using tools

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -12,7 +12,17 @@ pipeline
                         }
         stage('Hello') {
             steps {sh 'mvn -B -Denforcer.skip=true -DskipTests clean package'}
-                        }
+        }
+        stage('Test') {
+                steps {
+                    sh 'mvn test'
+                }
+                post {
+                    always {
+                        junit 'target/surefire-reports/*.xml'
+                    }
+                }
+        }
     }
 }
 /*
