--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,10 +1,12 @@
 pipeline
 {
-    agent  { label 'EC2' }
-            // docker {
-            //     image 'maven:3-alpine'
-            //     args '-v /root/.m2:/root/.m2'
-            // }
+    agent{ //{ label 'EC2' }
+
+            docker {
+                 image 'maven:3-alpine'
+                 args '-v /root/.m2:/root/.m2'
+            }
+          }
            //tools { maven   'Apache Maven 3.8.6' }
     stages {
         stage('Initialize') {
