--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -22,7 +22,7 @@ pipeline
                 post {
                     always {
                         junit 'target/surefire-reports/*.xml'
-                        [ $class: 'JacocoPublisher' ]
+                       step { [ $class: 'JacocoPublisher' ]}
                     }
                 }
         }
