--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -8,6 +8,12 @@ pipeline
             }
           }
            //tools { maven   'Apache Maven 3.8.6' }
+           jacoco(
+                 execPattern: 'target/*.exec',
+                 classPattern: 'target/classes',
+                 sourcePattern: 'src/main/java',
+                 exclusionPattern: 'src/test*'
+           )
     stages {
         stage('Initialize') {
             steps {sh '''echo "PATH = ${PATH}"'''}
@@ -22,7 +28,7 @@ pipeline
                 post {
                     always {
                         junit 'target/surefire-reports/*.xml'
-                       step { [ $class: 'JacocoPublisher' ]}
+                     //  step { [ $class: 'JacocoPublisher' ]}
                     }
                 }
         }
