--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -8,27 +8,31 @@ pipeline
             }
           }
            //tools { maven   'Apache Maven 3.8.6' }
-           jacoco(
-                 execPattern: 'target/*.exec',
-                 classPattern: 'target/classes',
-                 sourcePattern: 'src/main/java',
-                 exclusionPattern: 'src/test*'
-           )
+           //jacoco(
+          //execPattern: 'target/*.exec',classPattern: 'target/classes',sourcePattern: 'src/main/java',exclusionPattern: 'src/test*'
+          // )
     stages {
         stage('Initialize') {
             steps {sh '''echo "PATH = ${PATH}"'''}
                         }
-        stage('Hello') {
+        stage('Build') {
             steps {sh 'mvn -B -Denforcer.skip=true -DskipTests clean package'}
         }
         stage('Test') {
                 steps {
                     sh 'mvn test   -Denforcer.skip=true'
+                step { [ $class: 'JacocoPublisher' ]}
                 }
                 post {
                     always {
-                        junit 'target/surefire-reports/*.xml'
-                     //  step { [ $class: 'JacocoPublisher' ]}
+      junit 'target/surefire-reports/*.xml'
+     //step {
+     // [ $class: 'JacocoPublisher',
+     // execPattern: 'target/*.exec',
+     // classPattern: 'target/classes',
+     // sourcePattern: 'src/main/java',
+     // exclusionPattern: 'src/test*']
+     // }
                     }
                 }
         }
