--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -21,13 +21,13 @@ pipeline
         stage('Test') {
                 steps {
                     sh 'mvn test   -Denforcer.skip=true'
-                    step {
-                        [ $class: 'JacocoPublisher',
-                            execPattern: 'target/*.exec',
-                            classPattern: 'target/classes',
-                            sourcePattern: 'src/main/java',
-                            exclusionPattern: 'src/test*']
-                    }
+               //     step {
+               //         [ $class: 'JacocoPublisher',
+               //             execPattern: 'target/*.exec',
+               //             classPattern: 'target/classes',
+               //             sourcePattern: 'src/main/java',
+               //             exclusionPattern: 'src/test*']
+               //     }
                 }
                 post {
                     always {
